# ai-on-eks

./: .gitignore  .pre-commit-config.yaml  ADOPTERS.md  CONTRIBUTION_GUIDE.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: website-deploy.yaml
ai-ml/bionemo/terraform/: blueprint.tfvars
ai-ml/emr-spark-rapids/terraform/: blueprint.tfvars
ai-ml/infrastructure/terraform/: addons.tf  main.tf  variables.tf
ai-ml/jark-stack/terraform/: blueprint.tfvars
ai-ml/jupyterhub/terraform/: blueprint.tfvars
ai-ml/nvidia-triton-server/: main.tf
ai-ml/ray/terraform/: README.md  main.tf
ai-ml/trainium-inferentia/terraform/: blueprint.tfvars
blueprints/agentic/multi-agent-strands-bedrock/orchestrator/: README.md  a2a_agent.py  agent.py  main.py  mcp_agent.py  pyproject.toml  system.md
blueprints/agentic/multi-agent-strands-bedrock/orchestrator/multiagent/a2a/: client.py  tools.py
blueprints/agentic/multi-agent-strands-bedrock/weather/: .gitignore  AmazonQ.md  Dockerfile  README.md  REST_API_SESSION_GUIDE.md  a2a_client.py  a2a_server.py  agent.py  agent_a2a_server.py  agent_interactive.py  agent_mcp_server.py  agent_restapi.py  interactive.py  main.py  mcp.json  mcp_server.py  pyproject.toml  schemas.py  test.yaml  test_a2a_client.py  test_mcp_client.py  test_rest_api.py  weather_assistant.py  weather_interactive.py  weather_mcp_server.py
blueprints/agentic/multi-agent-strands-bedrock/weather/.amazonq/: mcp.json
blueprints/agentic/multi-agent-strands-bedrock/weather/helm/: values.yaml
blueprints/agentic/multi-agent-strands-bedrock/weather/helm/templates/: NOTES.txt  deployment.yaml  ingress-a2a.yaml  ingress-rest.yaml  service.yaml
blueprints/agentic/multi-agent-strands-bedrock/weather/helm/templates/tests/: test-connection.yaml
blueprints/agentic/multi-agent-strands-bedrock/weather/mcp-servers/weather-mcp-server/: Dockerfile  README.md
blueprints/agentic/multi-agent-strands-bedrock/weather/mcp-servers/weather-mcp-server/helm/templates/: NOTES.txt  deployment.yaml  ingress-mcp.yaml  service.yaml
blueprints/agentic/multi-agent-strands-bedrock/weather/mcp-servers/weather-mcp-server/helm/templates/tests/: test-connection.yaml
blueprints/agentic/multi-agent-strands-bedrock/weather/multiagent/a2a/: agent.py  executor.py
blueprints/agentic/multi-agent-strands-bedrock/weather/weather-mcp-server/: README.md  pyproject.toml  server.py  weather.py
blueprints/agentic/multi-agent-strands-bedrock/weather/weather-mcp-server/.amazonq/: mcp.json
blueprints/agentic/multi-agent-strands-bedrock/weather/weather-mcp-server/helm/: Chart.yaml  values.yaml
blueprints/inference/aibrix/: deepseek-distill.yaml
blueprints/inference/gpu/nvidia-nim-operator-llama3-8b/: deploy-nim-auth.sh  genaiperf-deploy.yaml  nim-cache-llama3-8b-instruct.yaml  nim-service-llama3-8b-instruct.yaml  openai-webui-deployment.yaml
blueprints/inference/stable-diffusion-rayserve-gpu/: ray-serve-stablediffusion.yaml
blueprints/inference/vllm-rayserve-inf2/: vllm-rayserve-deployment-70B.yaml  vllm-rayserve-deployment.yaml
blueprints/training/llama-lora-finetuning-trn1/: Dockerfile  build-container-image.sh  llama3-finetuning-script-configmap.yaml  lora-finetune-job.yaml  lora-finetune-resources.yaml  training-artifact-access-pod.yaml
blueprints/training/llama-lora-finetuning-trn1/assets/: consolidate_adapter_shards_and_merge_model.py  finetune_llama.py  test_model.py
infra/aibrix/: install.sh
infra/aibrix/terraform/: blueprint.tfvars
infra/base/terraform/: addons.tf  argocd_addons.tf  cleanup.sh  efs.tf  eks.tf  fsx-for-lustre.tf  jupyterhub.tf  main.tf  outputs.tf  variables.tf  versions.tf  vpc.tf
infra/bionemo/: install.sh
infra/bionemo/terraform/: blueprint.tfvars
infra/custom/terraform/: blueprint.tfvars
infra/emr-spark-rapids/: README.md
infra/emr-spark-rapids/terraform/: blueprint.tfvars
infra/jark-stack/terraform/: blueprint.tfvars
infra/jupyterhub/: install.sh
infra/jupyterhub/terraform/: blueprint.tfvars
infra/mlflow/terraform/: blueprint.tfvars
infra/nvidia-nim/: install.sh
infra/nvidia-nim/terraform/: blueprint.tfvars  nvidia-nim-operator.tf
infra/nvidia-triton-server/: README.md  nvidia-triton-server.tf  variables.tf
infra/trainium-inferentia/terraform/: blueprint.tfvars
website/: docusaurus.config.js  package-lock.json  sidebars.js
website/docs/: intro.md
website/docs/ai/: index.md
website/docs/bestpractices/: intro.md  observability.md  preload-container-images.md
website/docs/introduction/: intro.md
website/src/css/: custom.css
website/src/pages/: index.js  index.module.css
(+49 files in other folders)
