[project]
name = "travel-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk>=0.2.8",
    "boto3>=1.38.35",
    "mcp>=1.9.4",
    "nest-asyncio>=1.6.0",
    "rich>=14.0.0",
    "strands-agents @ git+https://github.com/strands-agents/sdk-python.git@main",
    "strands-agents-tools @ git+https://github.com/strands-agents/tools.git@main",
]
